<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/checkInternetConnectionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/check_internet_connection"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/refreshConnectionButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:text="@string/refresh"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkInternetConnectionText">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray2"
        android:visibility="visible"
        tools:context=".presentation.fragments.currencyFragment.CurrencyListFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mainCardView"
            app:cardCornerRadius="30dp"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:clipToPadding="false"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline92"
            app:layout_constraintStart_toStartOf="@id/leftGuideline08"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mainCardViewConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline92"
                app:layout_constraintStart_toStartOf="@id/leftGuideline08">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/currencyInfoCardView"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    style="@style/CustomCardViewStyle"
                    android:clipToPadding="false"
                    app:cardBackgroundColor="@color/light_gray2"
                    app:cardElevation="8dp"
                    app:contentPadding="4dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@color/colorPrimaryDark"
                    app:strokeWidth="1dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageButton
                            android:textAlignment="center"
                            android:id="@+id/filterButton"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/round_button"
                            android:src="@drawable/sort_icon"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="20dp"
                            android:textSize="12sp"
                            android:gravity="center"
                            android:text="@string/sort_button_text"
                            android:fontFamily="@font/aldrich"
                            app:layout_constraintStart_toStartOf="@id/filterButton"
                            app:layout_constraintEnd_toEndOf="@id/filterButton"
                            app:layout_constraintTop_toBottomOf="@id/filterButton">
                        </TextView>

                        <TextView
                            android:id="@+id/selectCurrencyText"
                            android:layout_width="270dp"
                            android:maxLines="1"
                            android:layout_height="50dp"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/aldrich"
                            android:text="@string/select_currency"
                            android:textSize="25sp"
                            app:layout_constraintBottom_toTopOf="@id/currencyListSpinner"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Spinner
                            android:id="@+id/currencyListSpinner"
                            android:layout_width="285dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:dropDownWidth="300dp"
                            android:dropDownVerticalOffset="50dp"
                            android:entries="@array/currency_codes"
                            android:popupBackground="@color/light_gray2"
                            android:spinnerMode="dropdown"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@id/selectCurrencyText"
                            app:layout_constraintStart_toStartOf="@id/selectCurrencyText" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                    <EditText
                        android:id="@+id/amountTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@null"
                        android:digits="0123456789"
                        android:gravity="end|center"
                        android:hint="@string/_0"
                        android:inputType="numberDecimal"
                        android:maxLength="15"
                        android:layout_marginEnd="10dp"
                        android:maxLines="1"
                        android:padding="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textSize="30sp"
                        android:autofillHints="" />

                </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".04"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline92"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".96"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCurrency"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:spanCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline92"
            app:layout_constraintStart_toEndOf="@+id/leftGuideline08"
            app:layout_constraintTop_toBottomOf="@+id/mainCardView"
            tools:listitem="@layout/currency_item"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>